syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message AvatarSkillDepotChangeNotify {
	uint64 avatar_guid = 14;
	uint32 core_proud_skill_level = 2;
	uint32 skill_depot_id = 1;
	uint32 entity_id = 3;
	repeated uint32 proud_skill_list = 8;
	repeated uint32 talent_id_list = 13;
	map<uint32, uint32> proud_skill_extra_level_map = 6;
	map<uint32, uint32> skill_level_map = 10;
}